--- a/src/components/footer/components/footer-contact/footer-contact.module.scss
+++ b/src/components/footer/components/footer-contact/footer-contact.module.scss
@@ -37,6 +37,9 @@
   }
 
   &__socials {
+    display: flex;
+    align-items: center;
+
     align-self: flex-end;
     margin-top: 20px;
     gap: 10px;
