--- a/src/components/header/components/header-logo/header-logo.module.scss
+++ b/src/components/header/components/header-logo/header-logo.module.scss
@@ -5,6 +5,7 @@
 
   &__description {
     margin: 0;
+    max-width: 140px;
 
     color: var(--primary-text-color);
     font-family: 'Montserrat', serif;
