--- a/src/components/header/components/header-socials/header-socials.module.scss
+++ b/src/components/header/components/header-socials/header-socials.module.scss
@@ -2,6 +2,7 @@
   gap: 48px;
   flex-grow: 1;
   display: flex;
+  align-items: center;
   justify-content: end;
   flex-basis: 390px;
 
@@ -15,5 +16,10 @@
     text-align: right;
 
     text-decoration: none;
+    
+    @media screen and (max-width: 1180px) {
+      display: none;
+    }
   }
+
 }
