--- a/src/components/main-content/components/main-content-external-info-group-card/main-content-external-info-group-card.module.scss
+++ b/src/components/main-content/components/main-content-external-info-group-card/main-content-external-info-group-card.module.scss
@@ -2,6 +2,13 @@
   max-width: 150px;
   text-align: right;
 
+  @media screen and (max-width: 750px) {
+    & {
+      text-align: center;
+    }
+  }
+
+
   &__title {
     margin: 0;
 
@@ -14,6 +21,33 @@
 
     letter-spacing: 0.05em;
     text-transform: uppercase;
+
+    @media screen and (max-width: 425px) {
+      & {
+        position: relative;
+
+        padding-left: 15px;
+        text-align: start;
+
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 16px;
+
+        &:before {
+          position: absolute;
+
+          bottom: 50%;
+          left: 0;
+
+          content: "";
+
+          width: 10px;
+          height: 2px;
+
+          background: var(--text-second-gradient);
+        }
+      }
+    }
   }
 
   &__content {
@@ -25,6 +59,11 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    text-align: right;
+
+    @media screen and (max-width: 425px) {
+      & {
+        display: none;
+      }
+    }
   }
 }
