--- a/src/components/main-content/components/main-content-external-info/main-content-external-info.module.scss
+++ b/src/components/main-content/components/main-content-external-info/main-content-external-info.module.scss
@@ -1,8 +1,12 @@
 .mainContentExternalInfo {
+  display: flex;
+  flex-direction: column;
 
   &__title {
     margin: 0;
     max-width: 290px;
+
+    align-self: flex-end;
 
     color: var(--primary-text-color);
 
@@ -13,15 +17,35 @@
     line-height: 22px;
     text-align: right;
 
+    @media screen and (max-width: 750px) {
+      & {
+        align-self: center;
+        text-align: center;
+      }
+    }
+    @media screen and (max-width: 425px) {
+      & {
+        align-self: start;
+        text-align: start;
+      }
+    }
+
     &_extra {
       font-family: Inter, serif;
       font-style: normal;
       font-weight: 900;
+      text-transform: uppercase;
 
       background: var(--text-second-gradient);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+
+      @media screen and (max-width: 425px) {
+        & {
+          text-transform: lowercase;
+        }
+      }
     }
   }
 }
