--- a/src/components/main-content/components/main-content/main-content.module.scss
+++ b/src/components/main-content/components/main-content/main-content.module.scss
@@ -5,9 +5,30 @@
   display: flex;
   flex-direction: column;
 
+  @media screen and (max-width: 425px) {
+    & {
+      padding: 40px 0 60px;
+      gap: 45px;
+    }
+  }
+
   &__content {
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: 750px) {
+      & {
+        gap: 45px;
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+
+    @media screen and (max-width: 425px) {
+      & {
+        align-items: start;
+      }
+    }
   }
 
   &__contact {
@@ -26,5 +47,17 @@
     text-align: center;
 
     text-decoration: none;
+
+    @media screen and (max-width: 750px) {
+      & {
+        align-self: center;
+      }
+    }
+
+    @media screen and (max-width: 750px) {
+      & {
+        display: none;
+      }
+    }
   }
 }
