--- a/src/components/footer/components/footer-confidential/footer-confidential.module.scss
+++ b/src/components/footer/components/footer-confidential/footer-confidential.module.scss
@@ -10,6 +10,12 @@
 
   text-align: right;
 
+  @media screen and (max-width: 808px) {
+    margin-top: 50px;
+
+    text-align: left;
+  }
+
   &__text {
     margin: 0;
   }
