--- a/src/components/footer/components/footer-nav-column-item/footer-nav-column-item.module.scss
+++ b/src/components/footer/components/footer-nav-column-item/footer-nav-column-item.module.scss
@@ -8,5 +8,12 @@
     line-height: 19px;
 
     text-decoration: none;
+
+    @media screen and (max-width: 425px) {
+      & {
+        font-size: 14px;
+        line-height: 17px;
+      }
+    }
   }
 }
