--- a/src/components/footer/components/footer/footer.module.scss
+++ b/src/components/footer/components/footer/footer.module.scss
@@ -4,4 +4,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  
+  @media screen and (max-width: 1085px) {
+    gap: 30px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (max-width: 808px) {
+    padding: 40px 0 60px;
+    align-items: start;
+  }
 }
