--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ body {
   --text-color-gradient: linear-gradient(92deg, #FCB045 20%, #FF3F78 70%);
   --text-second-gradient: linear-gradient(92deg, #FCB045 1%, #e00d0d 100%);
 
-  background: #1E1E1E;
+  background: #0E1014;
 }
 
 code {
