--- a/src/components/main-content/components/main-content/main-content.module.scss
+++ b/src/components/main-content/components/main-content/main-content.module.scss
@@ -5,9 +5,12 @@
   display: flex;
   flex-direction: column;
 
+  @media screen and (max-width: 1200px) {
+    padding: 90px 20px;
+  }
   @media screen and (max-width: 425px) {
     & {
-      padding: 40px 0 60px;
+      padding: 40px 16px 60px;
       gap: 45px;
     }
   }
