--- a/src/modules/app/app.module.scss
+++ b/src/modules/app/app.module.scss
@@ -1,17 +1,54 @@
 .app {
+  position: relative;
   max-width: 1140px;
 
   margin: 0 auto;
 
-  @media screen and (max-width: 1200px) {
-    & {
-      padding: 0 20px;
+  &__main {
+    @media screen and (max-width: 750px) {
+      & {
+        position: relative;
+        overflow: hidden;
+      }
     }
   }
 
-  @media screen and (max-width: 425px) {
-    & {
-      padding: 0 16px;
-    }
+  &__light_red {
+    left: -15%;
+    top: 30%;
+
+    background: radial-gradient(rgba(211, 41, 41, 1)  10%,transparent);
+    animation: Move linear infinite 11s;
+
+  }
+
+  &__light_purple {
+    left: 45%;
+    top: -25%;
+
+    background: radial-gradient(#833AB4 10%,transparent);
+    animation: Move linear infinite 11s;
+  }
+}
+
+@keyframes Move {
+  0% {
+    transform: translate(25%,30%);
+  }
+
+  30% {
+    transform: translate(1%,10%);
+  }
+
+  50% {
+    transform: translate(0,0);
+  }
+
+  75% {
+    transform: translate(44%,30%);
+  }
+
+  100% {
+    transform: translate(25%,30%);
   }
 }
